<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/trafficlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/map"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/bg_color"
                android:orientation="vertical"
                android:padding="6dp">

                <CheckBox
                    android:id="@+id/traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="onTrafficToggled"
                    android:text="@string/traffic_finder" />

                <CheckBox
                    android:id="@+id/my_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="onMyLocationToggled"
                    android:text="@string/my_location" />

                <CheckBox
                    android:id="@+id/buildings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onBuildingsToggled"
                    android:text="@string/buildings"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/indoor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onIndoorToggled"
                    android:text="@string/indoor"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/maptype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trafficlocation"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="0dp">

                <Spinner
                    android:id="@+id/layers_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"/>
</LinearLayout>
