<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/actionbar_bg"
        android:paddingBottom="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="Search Number"
                android:textAlignment="center"
                android:textColor="@color/fg_color"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/searcheasyfirstrow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/country_btn">

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/spincountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            app:ccp_defaultNameCode="IN"
            app:ccp_textColor="@color/white" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_toRightOf="@+id/spincountry"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:maxLength="12"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/edittext_hint_color"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/submitfinal"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_search" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/lay2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true">

                        <fragment
                            android:id="@+id/map"
                            class="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </RelativeLayout>
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/maptype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/searcheasyfirstrow"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="80dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="0dp"
                    android:visibility="gone">

                    <Spinner
                        android:id="@+id/layers_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/dragView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_gravity="bottom"
                    android:background="@color/txt_color"
                    android:visibility="gone">

                    <RelativeLayout
                        android:id="@+id/alldetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/iconlay"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:visibility="gone">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/logoimage"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/viewlay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_toRightOf="@+id/iconlay"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_medium"
                                android:text="Name:"
                                android:textColor="@color/fg_color"
                                android:textSize="16dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/operator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/name"
                                android:fontFamily="@font/poppins_regular"
                                android:text="Operator:"
                                android:textColor="@color/fg_color"
                                android:textSize="16dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_below="@+id/operator"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/state"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text="State: "
                                    android:textColor="@color/fg_color"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/comma"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text=", "
                                    android:textColor="@color/fg_color"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/country"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_medium"
                                    android:text="Country: "
                                    android:textColor="@color/fg_color"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/userprofile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/iconlay"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:background="@color/txt_color"
                            android:visibility="gone">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/txt_color"
                                android:orientation="horizontal"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <Button
                                        android:id="@+id/pop_call"
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:layout_gravity="center"
                                        android:background="@drawable/ic_phone_callerid"
                                        android:gravity="center" />

                                    <TextView
                                        android:id="@+id/call_pop"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:fontFamily="@font/poppins_medium"
                                        android:gravity="center"
                                        android:text="@string/call_popup"
                                        android:textAlignment="center"
                                        android:textColor="@color/fg_color"
                                        android:textSize="13sp"
                                        android:textStyle="bold" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <Button
                                        android:id="@+id/pop_save"
                                        android:layout_width="60dp"
                                        android:layout_height="60dp"
                                        android:background="@drawable/ic_savenumber_callerid" />

                                    <TextView
                                        android:id="@+id/save_pop"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/poppins_medium"
                                        android:text="@string/save_popup"
                                        android:textColor="@color/fg_color"
                                        android:textSize="13sp"
                                        android:textStyle="bold" />
                                </LinearLayout>
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/scroll_background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/userprofile" />

                        <LinearLayout
                            android:id="@+id/defaultvis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/userprofile"
                            android:orientation="vertical" />
                    </RelativeLayout>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>